[gd_scene load_steps=10 format=3 uid="uid://hvq6ahoo0qlt"]

[ext_resource type="PackedScene" uid="uid://dgu7k4tkq7bt6" path="res://components/top_bar/top_bar.tscn" id="1_f5jsn"]
[ext_resource type="Script" uid="uid://bp4f8unh25y2r" path="res://windows/main/main.gd" id="1_n4hx8"]
[ext_resource type="PackedScene" uid="uid://dq8nucs408o8x" path="res://components/table_view/table_view.tscn" id="2_n4hx8"]
[ext_resource type="PackedScene" uid="uid://4w5ytux42uhw" path="res://windows/open_dialog/open_dialog.tscn" id="4_plsdc"]
[ext_resource type="PackedScene" uid="uid://bvwjtah8xp8lx" path="res://windows/save_dialog/save_dialog.tscn" id="5_t14ra"]
[ext_resource type="PackedScene" uid="uid://dp8xpaom0oaoe" path="res://windows/overwrite_dialog/overwrite_dialog.tscn" id="7_4xf0a"]
[ext_resource type="PackedScene" uid="uid://cr22q4bvxhlde" path="res://windows/discard_dialog/discard_dialog.tscn" id="8_jr0yn"]
[ext_resource type="PackedScene" uid="uid://epx3xmbxatqm" path="res://windows/bigfile_dialog/bigfile_dialog.tscn" id="9_h5scg"]
[ext_resource type="PackedScene" uid="uid://cykgssytmthxr" path="res://windows/about_window/about_window.tscn" id="9_hsn1q"]

[node name="Main" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n4hx8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_f5jsn")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TableView" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_n4hx8")]
unique_name_in_owner = true
layout_mode = 2

[node name="OpenDialog" parent="." node_paths=PackedStringArray("table_view", "bigfile_dialog") instance=ExtResource("4_plsdc")]
table_view = NodePath("../MarginContainer/VBoxContainer/TableView")
bigfile_dialog = NodePath("../BigfileDialog")

[node name="SaveDialog" parent="." node_paths=PackedStringArray("table_view") instance=ExtResource("5_t14ra")]
table_view = NodePath("../MarginContainer/VBoxContainer/TableView")

[node name="OverwriteDialog" parent="." node_paths=PackedStringArray("table_view") instance=ExtResource("7_4xf0a")]
table_view = NodePath("../MarginContainer/VBoxContainer/TableView")

[node name="DiscardDialog" parent="." node_paths=PackedStringArray("table_view") instance=ExtResource("8_jr0yn")]
dialog_text = "There is changes not saved.
Continuing now will discard any changes made until now."
table_view = NodePath("../MarginContainer/VBoxContainer/TableView")

[node name="AboutWindow" parent="." instance=ExtResource("9_hsn1q")]

[node name="BigfileDialog" parent="." instance=ExtResource("9_h5scg")]

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="about_requested" from="MarginContainer/VBoxContainer/TopBar" to="." method="_on_top_bar_about_requested"]
[connection signal="open_requested" from="MarginContainer/VBoxContainer/TopBar" to="." method="_on_top_bar_open_requested"]
[connection signal="quit_requested" from="MarginContainer/VBoxContainer/TopBar" to="." method="_on_top_bar_quit_requested"]
[connection signal="save_as_requested" from="MarginContainer/VBoxContainer/TopBar" to="." method="_on_top_bar_save_as_requested"]
[connection signal="save_requested" from="MarginContainer/VBoxContainer/TopBar" to="." method="_on_top_bar_save_requested"]
